--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0, user-scalable=no">
-<title>Bristol Hosting Co.title>
+<title>Bristol Hosting Co.</title>
 <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="css/bootstrap-slider.min.css">
 <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
@@ -78,7 +78,7 @@
                                                                     VPS Servers
                                                                 </div>
                                                                 <div class="mega-details">
-                                                                    For more flexibility, 
+                                                                    For more flexibility,
                                                                 </div>
                                                             </div>
                                                         </a>
@@ -111,7 +111,7 @@
     <div id="top-content" class="container-fluid">
         <div class="container">
             <div class="row">
-                <div class="col-md-12">x
+                <div class="col-md-12"><i>api error (2923)</i>
                     <div id="main-slider">
                         <div class="slide domainsearch-slide">
                             <div class="big-title">it’s not that hard to get<br> a website <span>anymore.</span></div>
@@ -129,7 +129,7 @@
                                 <div class="icon-bg"></div>
                                 <i class="htfy htfy-trophy"></i>
                             </div>
-                            <div class="big-title">Award winning hosting.</div>
+                            <div class="big-title">Award winning technology</div>
                         </div>
                         <div class="slide info-slide2">
                             <div class="icon-holder">
@@ -165,8 +165,8 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <div class="info-text">adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure.</div>
-                
+                <div class="info-text">We offer low-price web hosting services, running from our datacenter, in Bristol, UK, with state of the art technology, and around the clock support, to ensure you have the best service in the UK.</div>
+
                 <a href="signup.html" class="ybtn ybtn-accent-color ybtn-shadow">Create Your Account</a>
             </div>
         </div>
@@ -187,9 +187,7 @@
                     </div>
                     <div class="service-title"><a href="webhosting.html">Web Hosting</a></div>
                     <div class="service-details">
-                        <p>At vero eos et accusamus et iusto odio dignissimos
-ducimus qui blanditiis praesentium voluptatum div
-atque corrupti quos dolores et quas molestias.</p>
+                        <p>Our dedicated web hosting servers provide fast & reliable web hosting  services.</p>
                     </div>
                 </div>
             </div>
@@ -200,9 +198,7 @@ atque corrupti quos dolores et quas molestias.</p>
                     </div>
                     <div class="service-title"><a href="#">Resellers</a></div>
                     <div class="service-details">
-                        <p>At vero eos et accusamus et iusto odio dignissimos
-ducimus qui blanditiis praesentium voluptatum div
-atque corrupti quos dolores et quas molestias.</p>
+                        <p> It's quick and easy to get started as a Bristol Hosting Reseller selling industry leading products and services. But we want you to achieve maximum success and to make money for your business. Our belief is that a successful online business is so much more than web space and bandwidth (although we do give you that too!).</p>
                     </div>
                 </div>
             </div>
@@ -213,9 +209,7 @@ atque corrupti quos dolores et quas molestias.</p>
                     </div>
                     <div class="service-title"><a href="vpshosting.html">VPS Hosting</a></div>
                     <div class="service-details">
-                        <p>At vero eos et accusamus et iusto odio dignissimos
-ducimus qui blanditiis praesentium voluptatum div
-atque corrupti quos dolores et quas molestias.</p>
+                        <p>Give your business a state-of-the-art web presence and high end performance without breaking the bank with virtual server hosting with Bristol Hosting Co.</p>
                     </div>
                 </div>
             </div>
@@ -226,9 +220,7 @@ atque corrupti quos dolores et quas molestias.</p>
                     </div>
                     <div class="service-title"><a href="cloudhosting.html">Cloud Hosting</a></div>
                     <div class="service-details">
-                        <p>At vero eos et accusamus et iusto odio dignissimos
-ducimus qui blanditiis praesentium voluptatum div
-atque corrupti quos dolores et quas molestias.</p>
+                        <p>Coming Autumn 2018.</p>
                     </div>
                 </div>
             </div>
@@ -551,7 +543,7 @@ atque corrupti quos dolores et quas molestias.</p>
                     <div class="phone"><i class="fa fa-phone"></i> 00 285 900 38502</div>
                     <div class="email"><i class="fa fa-envelope"></i> hello@hostify.com</div>
                     <div class="address">
-                        <i class="fa fa-map-marker"></i> 
+                        <i class="fa fa-map-marker"></i>
                         <div>City Avenue, Office 64,<br>
                             Floor 6,  Milbourne,<br>
                             Australia.</div>
